--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Dice Game</title>
 </head>
 <body>
+
+    <div class="container">
+
+        <h1>Refresh Me!</h1>
+
+        <div>
+            <p>Player 1</p>
+            <img src="images/dice1.png" alt="not found">
+        </div>
+
+        <div>
+            <p>Player 2</p>
+            <img src="images/dice1.png" alt="not found">
+        </div>
+
+    </div>
     
 </body>
 </html>
