--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
         <h1>Refresh Me!</h1>
 
-        <div>
+        <div class="dice">
             <p>Player 1</p>
             <img src="images/dice1.png" alt="not found">
         </div>
 
-        <div>
+        <div class="dice">
             <p>Player 2</p>
             <img src="images/dice1.png" alt="not found">
         </div>
