--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
         <div class="dice">
             <p>Player 1</p>
-            <img class="img" src="images/dice1.png" alt="not found">
+            <img class="img1" src="images/dice1.png" alt="not found">
         </div>
 
         <div class="dice">
             <p>Player 2</p>
-            <img class="img" src="images/dice1.png" alt="not found">
+            <img class="img2" src="images/dice1.png" alt="not found">
         </div>
 
     </div>
